--- a/FY19/Views/Shared/PageTemplates/KMJ_CommonPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_CommonPageView.cshtml
@@ -492,10 +492,10 @@
                     <div class="main">
                         @*//render here!*@
 
-                        @if (Model.Text != null)
+                        @*@if (Model.Text != null)
                         {
                             @Html.Raw(Model.Text)
-                        }
+                        }*@
 
                         @*@Html.Raw(Model.Text)*@
 
