--- a/FY19/Views/Shared/Widgets/AnnotationListView.cshtml
+++ b/FY19/Views/Shared/Widgets/AnnotationListView.cshtml
@@ -34,7 +34,7 @@
     string leftFootClass = string.Empty;
     string text1 = "test", text2 = string.Empty, text3 = string.Empty, text4 = string.Empty, text5 = string.Empty, text6 = string.Empty, text7 = string.Empty, text8 = string.Empty, text9 = string.Empty, text10 = string.Empty;
 
-    if (Model.Properties.Count == "None")
+    if (Model.Properties.Count == "none")
     { leftFootClass = "listFootNote001"; }
     else
     { leftFootClass = "listFootNote002"; }
@@ -120,7 +120,31 @@
     else { text10 = Model.Properties.Text10; }
 }
 
-@if (Context.Kentico().PageBuilder().EditMode)
+
+    <ul class="@leftFootClass @if (Model.Properties.Id != null) { @Model.Properties.Class; } " id="@Model.Properties.Id">
+        @if (text1 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text1.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text2 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text2.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text3 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text3.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text4 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text4.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text5 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text5.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text6 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text6.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text7 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text7.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text8 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text8.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text9 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text9.Replace(Environment.NewLine, "<br/>")))</li>}
+        @if (text10 != null)
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text10.Replace(Environment.NewLine, "<br/>")))</li>}
+    </ul>
+
+@*@if (Context.Kentico().PageBuilder().EditMode)
 {
     <div style="height: 50px; font-weight: bold">
         <p>Annotation List Widget:</p>
@@ -210,24 +234,24 @@ else
 {
     <ul class="@leftFootClass @if (Model.Properties.Id != null) { @Model.Properties.Class; } " id="@Model.Properties.Id">
         @if (text1 != null)
-        {<li>@text1</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text1.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text2 != null)
-        {<li>@text2</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text2.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text3 != null)
-        {<li>@text3</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text3.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text4 != null)
-        {<li>@text4</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text4.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text5 != null)
-        {<li>@text5</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text5.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text6 != null)
-        {<li>@text6</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text6.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text7 != null)
-        {<li>@text7</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text7.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text8 != null)
-        {<li>@text8</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text8.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text9 != null)
-        {<li>@text9</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text9.Replace(Environment.NewLine, "<br/>")))</li>}
         @if (text10 != null)
-        {<li>@text10</li>}
+        {<li>@Html.Raw(HttpUtility.HtmlDecode(text10.Replace(Environment.NewLine, "<br/>")))</li>}
     </ul>
-}
+}*@
