--- a/FY19/Views/Shared/Widgets/H2View.cshtml
+++ b/FY19/Views/Shared/Widgets/H2View.cshtml
@@ -37,14 +37,12 @@
     {
         headText = HtmlToPlainText(Model.Properties.Heading_Text);
     }
-    else
-    {
-        headText = Model.Properties.Heading_Text;
-    }
 }
 
+    <h2 class="h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 @if (Model.Properties.Id != null) { @Model.Properties.Class } " id="@Model.Properties.Id" style="word-wrap: break-word;">@Html.Raw(HttpUtility.HtmlDecode(headText.Replace(Environment.NewLine, "<br/>")))</h2>
 
-@if (Context.Kentico().PageBuilder().EditMode)
+
+@*@if (Context.Kentico().PageBuilder().EditMode)
 {
     Type propType = typeof(KMJ_TextContentProperties);
     System.Reflection.PropertyInfo pInfo = propType.GetProperty("TextContent");
@@ -53,13 +51,12 @@
     {
         PropertyWidget = "H2",
         PropertyName = "Heading_Text",
-        Text = Model.Properties.Heading_Text.Replace(Environment.NewLine, "<br/>"),
+        Text = headText.Replace(Environment.NewLine, "<br/>"),
         Class = "h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 " + Model.Properties.Class
     });
 }
 else
 {
 
-
-    <h2 class="h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 @Model.Properties.Class" id="@Model.Properties.Id" style="word-wrap: break-word;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text.Replace(Environment.NewLine, "<br/>")))</h2>
-}
+    <h2 class="h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 @if (Model.Properties.Id != null) { @Model.Properties.Class } " id="@Model.Properties.Id" style="word-wrap: break-word;">@Html.Raw(HttpUtility.HtmlDecode(headText.Replace(Environment.NewLine, "<br/>")))</h2>
+}*@
