--- a/FY19/Views/Shared/Widgets/H4View.cshtml
+++ b/FY19/Views/Shared/Widgets/H4View.cshtml
@@ -37,25 +37,26 @@
     {
         headText = HtmlToPlainText(Model.Properties.Heading_Text);
     }
-    else
-    {
-        headText = Model.Properties.Heading_Text;
-    }
 }
 
-@if (Context.Kentico().PageBuilder().EditMode)
+    <h4 class="h4 @if (Model.Properties.Id != null) { @Model.Properties.Class }" id="@Model.Properties.Id" style="word-wrap: break-word;
+        white-space: pre-wrap;">
+        @Html.Raw(HttpUtility.HtmlDecode(headText.Replace(Environment.NewLine, "<br/>")))
+    </h4>
+
+@*@if (Context.Kentico().PageBuilder().EditMode)
 {
 
     Html.RenderPartial("InlineEditors/HeaderEditor", new TextEditorViewModel
     {
         PropertyWidget = "H4",  
         PropertyName = "Heading_Text",
-        Text = Model.Properties.Heading_Text.Replace(Environment.NewLine, "<br/>"),
+        Text = headText.Replace(Environment.NewLine, "<br/>"),
         Class = "h4 " + Model.Properties.Class
     });
 }
 else
 {
-<h4 class="h4 @Model.Properties.Class" id="@Model.Properties.Id" style="word-wrap: break-word;
-        white-space: pre-wrap;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text.Replace(Environment.NewLine, "<br/>")))</h4>
-}
+<h4 class="h4 @if (Model.Properties.Id != null) { @Model.Properties.Class }" id="@Model.Properties.Id" style="word-wrap: break-word;
+        white-space: pre-wrap;">@Html.Raw(HttpUtility.HtmlDecode(headText.Replace(Environment.NewLine, "<br/>")))</h4>
+}*@
