--- a/FY19/Views/Shared/Widgets/LinkButtonView.cshtml
+++ b/FY19/Views/Shared/Widgets/LinkButtonView.cshtml
@@ -32,6 +32,8 @@
 
 @{
     string textContent = string.Empty, url = string.Empty;
+    string tBlank = string.Empty;
+    string thisId = string.Empty;
 
     if (Model.Properties.TextContent != null)
     {
@@ -53,14 +55,29 @@
     {
         url = Model.Properties.Url;
     }
+
+    if (Model.Properties.Blank)
+    {
+        tBlank = "target=_blank";
+    }
+
+    if (Model.Properties.Id != null)
+    {
+        thisId = "id = " + Model.Properties.Id.Replace(" ", "");
+    }
 }
 
-@if (Context.Kentico().PageBuilder().EditMode)
+    <div class="btn btn001 @if (Model.Properties.Id != null) { @Model.Properties.Class; }" @if (Model.Properties.Id != null) { @thisId }>
+        <a href="https://@url" @if (Model.Properties.Blank) { @tBlank }>@if (textContent != null)
+        {@Html.Raw(HttpUtility.HtmlDecode(textContent.Replace(Environment.NewLine, "<br/>")))}</a>
+    </div>
+
+@*@if (Context.Kentico().PageBuilder().EditMode)
 {
     Html.RenderPartial("InlineEditors/TextEditor", new TextEditorViewModel
     {
         PropertyName = "TextContent",
-        Text = "Label: &nbsp;" + textContent
+        Text = "Label: &nbsp;" + (textContent != null ? textContent.Replace(Environment.NewLine, "<br/>") : "")
     });
 
     Html.RenderPartial("InlineEditors/TextEditor", new TextEditorViewModel
@@ -72,6 +89,6 @@
 else
 {
     <div class="btn btn001 @if (Model.Properties.Id != null) { @Model.Properties.Class; } " id="@if (Model.Properties.Id != null) { @Model.Properties.Id.Replace(" ", ""); }">
-        <a href="https://@url" target="_blank">@textContent</a>
+        <a href="https://@url" target="_blank">@if (textContent != null) { @Html.Raw(HttpUtility.HtmlDecode(textContent.Replace(Environment.NewLine, "<br/>")))}</a>
     </div>
-}
+}*@
