commit QA Feedback (h2, h3, h4, downloadItem)

--- a/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
+++ b/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
@@ -27,7 +27,7 @@
     }
 
     string newIcon = string.Empty;
-    if (Model.Properties.NewIcon == "Display")
+    if (Model.Properties.NewIcon == "display")
     {
         newIcon = "catalog-row__col__img--new";
     }
