--- a/FY19/Views/Shared/Widgets/H3View.cshtml
+++ b/FY19/Views/Shared/Widgets/H3View.cshtml
@@ -39,7 +39,7 @@
     }
 }
 
-    <h3 class="h3 @if (Model.Properties.Id != null) { @Model.Properties.Class } " id="@Model.Properties.Id" style="word-wrap: break-word; white-space: pre-wrap;">
+    <h3 class="h3 @if (Model.Properties.Id != null) { @Model.Properties.Class } " id="@Model.Properties.Id" >
         @Html.Raw(HttpUtility.HtmlDecode(headText.Replace(Environment.NewLine, "<br/>")))
     </h3>
 
